--- a/src/app/components/directives/widgets/notifications/notifications.html
+++ b/src/app/components/directives/widgets/notifications/notifications.html
@@ -1,10 +1,10 @@
-<a href="#/notifications" class="waves-effect waves-teal btn-flat white-text">{{'notifications.more' | translate}} <i
+<a href="#/notifications" class="waves-effect waves-teal btn-flat blue-grey-text text-darken-2">{{'notifications.more' | translate}} <i
         class="material-icons right">forward</i></a>
 <ul class="collection blue-grey-text text-darken-2">
     <li class="collection-item avatar" ng-repeat="n in notifications">
         <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle">
         <a href="#/notifications/{{n._id}}"><span class="title" ng-bind="n.title"></span></a>
-        <p><span class="truncate" ng-bind="n.content"></span> <br>
+        <p><span class="truncate" ng-bind="n.content"></span>
             <small>{{n.from_user_id.firstname}} {{n.from_user_id.name}} <br /> {{n.timestamp | date : 'short'}} |
                 <a href="javascript:void(0);" ng-click="markAsRead(n._id)" class="waves-effect waves-teal btn-flat"
                    style="padding: 0;">
@@ -17,6 +17,6 @@
                         class="tiny material-icons" title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
             </small>
         </p>
-        <a href="#/notifications/{{n._id}}" class="secondary-content"><i class="material-icons">forward</i></a>
+        <a href="#/notifications/{{n._id}}" class="secondary-content "><i class="material-icons md-36 light-green-text text-lighten-1">forward</i></a>
     </li>
 </ul>
