Adaptation Notification et dashboard

--- a/src/app/modules/sandbox/effective/players/mainPlayer.html
+++ b/src/app/modules/sandbox/effective/players/mainPlayer.html
@@ -27,7 +27,7 @@
         
         <v-pages class="vPages--default" active="activeTabIndex">
             <v-page>
-                <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
+                <div dashboard="dashboardMainPlayerOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardMainPlayer.html"></div>
             </v-page>
             <v-page>
                 <div class="col s8">
