--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -90,8 +90,8 @@
                             class="white-text fa fa-power-off"></i></a>
                     </li>
 
-                    <li class="right"><a href="#/private/profile" class="white-text"><i class="material-icons left">portrait</i>
-                        <span class="hide-on-med-and-down">{{user.firstname}} {{user.name}}</span></a>
+                    <li class="right">
+                        <a href="#/private/profile" class="white-text"><i class="material-icons left">portrait</i></a>
                     </li>
                     <li class="right">
                         <a class='dropdown-button' data-beloworigin="true" dropdown data-alignment="right"
@@ -140,8 +140,7 @@
                     <li class="divider"></li>
 
                     <li>
-                        <a href="#/private/profile" class="white-text"><i class="mdi-social-person-outline left"></i>{{user.firstname}}
-                            {{user.name}}</a>
+                        <a href="#/private/profile" class="white-text"><i class="mdi-social-person-outline left"></i></a>
                     </li>
 
                     <li>
@@ -272,19 +271,20 @@
            translate="commons.buttons.close"></a>
     </div>
 </div>
-<div id='notificationDropdown' class='notification dropdown-content'>
+
+<div id='notificationDropdown' class='notification dropdown-content blue-grey lighten-4'>
     <div class="row" style="padding-left: 10px">
-        <div class="col s12"><a href="#/notifications" class="waves-effect waves-teal btn-flat">
+        <div class="col s12"><a href="#/notifications" class="waves-effect waves-teal btn-flat blue-grey-text text-darken-2">
             {{'notifications.more' | translate}} <i class="material-icons right">forward</i></a>
         </div>
     </div>
-    <div ng-repeat="n in notifications" class="hoverable grey-text text-darken-2">
+    <div ng-repeat="n in notifications" class="hoverable blue-grey-text text-darken-2 white">
         <div class="row">
             <div class="col s2">
                 <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle" width="30px">
             </div>
             <div class="col s10">
-                <b><a href="#/notifications/{{n._id}}" class="grey-text text-darken-2" ng-bind="n.title"></a></b>
+                <a href="#/notifications/{{n._id}}" class="blue-text text-lighten-2" ng-bind="n.title"></a>
                 <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
                    class="waves-effect waves-teal btn-flat right">
                     <i class="tiny material-icons" ng-if="n.read"
