--- a/src/app/modules/home/mainHome.html
+++ b/src/app/modules/home/mainHome.html
@@ -6,7 +6,7 @@
 
     <div class="row">
         <div class="col s12">
-            <div dashboard="dashboardOptions" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
+            <div dashboard="dashboardOptionsHome" class="dashboard-container" template-url="app/components/directives/widgets/dashboardHome.html"></div>
         </div>
     </div>
 
