--- a/src/app/modules/home/notifications/notifications.html
+++ b/src/app/modules/home/notifications/notifications.html
@@ -6,9 +6,11 @@
         <div class="col" ng-class="{'s12': !id, 's4' : id}">
             <ul class="collection grey-text text-darken-2">
                 <li class="collection-item avatar" ng-repeat="n in notifications"
-                    ng-class="{'grey lighten-1' : n.read && n._id !== id, 'light-green lighten-4' : n._id === id}">
-                    <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle">
-                    <span class="title" ng-bind="n.title"></span>
+                    ng-class="{'grey lighten-1' : n.read && n._id !== id, 'colorSecondary' : n._id === id}">
+                    <img ng-src="{{getAvatar(n.from_user_id.avatar)}}" alt="" class="circle hide-on-med-and-down">
+                    <a href="javascript:void(0);" class="title" 
+                       ng-class="{'white-text' : n._id === id}"
+                       ng-bind="n.title" ng-click="show(n._id)"></a>
                     <p><span class="truncate" ng-bind="n.exerp"></span> <br>
                         <small>{{n.from_user_id.firstname}} {{n.from_user_id.name}} | {{n.timestamp | date : 'short'}} |
                             <a href="javascript:void(0);" ng-click="markAsRead(n._id)"
@@ -24,24 +26,13 @@
                                     title="{{'headerMenu.notifications.delete' | translate}}">delete</i></a>
                         </small>
                     </p>
-                    <a href="javascript:void(0);" class="secondary-content"><i class="material-icons"
-                                                                               ng-click="show(n._id)">forward</i></a>
+                    <a href="javascript:void(0);" class="secondary-content"><i class="material-icons md-24 light-green-text text-lighten-1" ng-click="show(n._id)">forward</i></a>
                 </li>
             </ul>
         </div>
         <div class="col s8" ng-if="id">
-            <div class="card-panel" ng-if="notifications.length ===0">
-                <h4 class="center-align" translate="notifications.nodata"></h4>
-            </div>
             <div class="card-panel" ng-if="notif">
-                <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a>
-                <div class="center-align">
-                    <img ng-src="{{getAvatar(notif.from_user_id.avatar)}}" alt="" class="circle">
-                </div>
-                <div class="center-align">
-                    {{notif.from_user_id.firstname}} {{notif.from_user_id.name}}
-                </div>
-                <h4 ng-bind="notif.title"></h4>
+                <h4><a href="javascript:void(0);" ng-bind="notif.title"></a> <a href="javascript:void(0);" class="right"><i class="material-icons" ng-click="close()">close</i></a></h4>
                 <p ng-bind-html="notif.content" style="text-align: justify"></p>
                 <small>{{notif.timestamp | date : 'short'}}
                     |
@@ -58,5 +49,8 @@
                 </small>
             </div>
         </div>
+        <div class="card-panel" ng-if="notifications.length ===0">
+                <h4 class="center-align" translate="notifications.nodata"></h4>
+            </div>
     </div>
 </div>
