--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -150,41 +150,36 @@
                 <span translate="landing.contact.popin.title"></span>
             </h5>
         </div>
+        <!-- Begin MailChimp Signup Form -->
 
-        <form name="subMailingListForm" action="http://mailinglist.fr/mlbox/form"
-              target="_blank" method="post">
+        <div id="mc_embed_signup">
             <div class="modal-content grey lighten-3 ">
-                <div class="row">
-                    <input type="hidden" name="ListID" value="2113">
-                    <div class="input-field col s12">
-                        <input id="email" name="email" type="email" placeholder="Email" class="validate" required/>
-                        <label for="email" translate="landing.contact.popin.email"></label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s6">
-                        <input class="with-gap" name="action"
-                               id="subscribe" value="subscribe"
-                               type="radio" checked/>
-                        <label for="subscribe" translate="landing.contact.popin.subscribe"></label>
-                    </div>
-                    <div class="input-field col s6">
-                        <input class="with-gap" name="action"
-                               id="unsubscribe" value="unsubscribe"
-                               type="radio"/>
-                        <label for="unsubscribe" translate="landing.contact.popin.unsubscribe"></label>
-                    </div>
-                </div>
-            </div>
+                <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
+                      method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
+                      novalidate>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
+                            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" class="validate"
+                                   required>
+                        </div>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
+                        </div>
 
-            <div class="row center">
-                <div class="col s12">
-                    <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
-                       translate="commons.buttons.cancel"></a>
-                    <button type="submit" class="btn waves-effect waves-red  green darken-1"
-                            translate="commons.buttons.validate"></button>
-                </div>
+                    </div>
+                    <div class="row center">
+                        <div class="col s12">
+                            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red"
+                               translate="commons.buttons.cancel"></a>
+                            <button type="submit" class="btn waves-effect waves-red  green darken-1" value="Subscribe"
+                                    name="subscribe"
+                                    translate="commons.buttons.validate"></button>
+                        </div>
+                    </div>
+                </form>
             </div>
-        </form>
+        </div>
     </div>
 </div>
