--- a/src/app/modules/public/mainPublic.html
+++ b/src/app/modules/public/mainPublic.html
@@ -156,7 +156,7 @@
             <div class="modal-content grey lighten-3 ">
                 <form action="//qaobee.us13.list-manage.com/subscribe/post?u=d55c6a8036c505a3675d0b352&amp;id=883987d33d"
                       method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank"
-                      novalidate>
+                      novalidate class="validate">
                     <div class="row">
                         <div class="input-field col s12">
                             <label for="mce-EMAIL" translate="landing.contact.popin.email"></label>
@@ -167,7 +167,11 @@
                         <div style="position: absolute; left: -5000px;" aria-hidden="true">
                             <input type="text" name="b_d55c6a8036c505a3675d0b352_883987d33d" tabindex="-1" value="">
                         </div>
-
+                        <div id="mce-responses" class="clear">
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
+                        </div>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                     </div>
                     <div class="row center">
                         <div class="col s12">
@@ -178,6 +182,19 @@
                                     translate="commons.buttons.validate"></button>
                         </div>
                     </div>
+                    <script type='text/javascript'
+                            src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+                    <script type='text/javascript'>(function () {
+                        window.fnames = new Array();
+                        window.ftypes = new Array();
+                        fnames[0] = 'EMAIL';
+                        ftypes[0] = 'email';
+                        fnames[1] = 'FNAME';
+                        ftypes[1] = 'text';
+                        fnames[2] = 'LNAME';
+                        ftypes[2] = 'text';
+                    }(jQuery));
+                    var $mcj = jQuery.noConflict(true);</script>
                 </form>
             </div>
         </div>
