--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -1,9 +1,9 @@
 <!-- cup, championship, friendly game -->
 <div class="card">
     <div class="{{color1}} {{textColor1}}">
-        <h5 class="card-content center {{color2}} {{textColor2}}">
+        <h5 class="card-content center {{color2}} {{textColor2}}" style="height:48px;">
             <span class="left"><i class="material-icons">{{icon}}</i></span>
-            <span>{{title | translate }}</span>
+            <span><small>{{title | translate }}</small></span>
             <span class="right" ng-hide="isCollected">
                 <a href="#/private/updateEvent/{{event._id}}" class="{{textColor2}} waves-effect waves-light"><i
                         class="material-icons">mode_edit</i></a>
@@ -11,22 +11,23 @@
             <span class="right" ng-show="isCollected">
                 <a href="#/private/eventStats/{{collectId}}" class="{{textColor2}} waves-effect waves-light"><i
                         class="fa fa-bar-chart"></i></a>
-                <span ng-if="hasCompare">&nbsp;
-                    <input type="checkbox" ng-model="compareList[event._id]" name="compare"
-                           ng-change="updateEventToCompare(event._id)"
-                           ng-checked="compareList[event._id]" id="compare-{{event._id}}"/>
-                    <label for="compare-{{event._id}}"></label>
-                </span>
             </span>
         </h5>
 
-        <div class="card-content">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp;
+        <div class="card-content" style="height:48px;">&nbsp; {{event.participants.teamHome.label}} <br/> &nbsp;
             {{event.participants.teamVisitor.label}}
         </div>
-        <div class="card-content">{{event.startDate}}
+        <div class="card-content"><small>{{event.startDate}}</small>
             <a ng-show="mapShow" class="waves-effect waves-light {{textColor1}} right" ng-click="openMap()">
                 <i class="material-icons">location_on</i>
             </a>
+            <span ng-if="hasCompare" ng-show="isCollected" class="right">&nbsp;
+                <input type="checkbox" ng-model="compareList[event._id]" name="compare"
+                       ng-change="updateEventToCompare(event._id)"
+                       ng-checked="compareList[event._id]" id="compare-{{event._id}}"/>
+                <label for="compare-{{event._id}}"></label>
+            </span>
+            
         </div>
     </div>
 </div>
