--- a/src/app/modules/sandbox/stats/team/teamStats.html
+++ b/src/app/modules/sandbox/stats/team/teamStats.html
@@ -56,25 +56,25 @@
                 </div>
                 
                 <div class="col l3 m6 s12">
-                    <stats-efficiency bind-to-id="gaugeEfficiencyGlobal" 
+                    <stats-efficiency bindtoid="gaugeEfficiencyGlobal" 
                         label="efficiencyTotal" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
-                    <stats-efficiency bind-to-id="gaugeEfficiency9m" 
+                    <stats-efficiency bindtoid="gaugeEfficiency9m" 
                         label="efficiency9m" values="'values9m'" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
-                    <stats-efficiency bind-to-id="gaugeEfficiency6m" 
+                    <stats-efficiency bindtoid="gaugeEfficiency6m" 
                         label="efficiency6m" values="'values6m'" padding="25">
                     </stats-efficiency>
                 </div>
                 
                 <div class="col l3 m6 s12">
-                    <stats-efficiency bind-to-id="gaugeEfficiency7m" 
+                    <stats-efficiency bindtoid="gaugeEfficiency7m" 
                         label="efficiency7m" values="'values7m'" padding="25">
                     </stats-efficiency>
                 </div>
