--- a/src/app/components/directives/widgets/dashboard.html
+++ b/src/app/components/directives/widgets/dashboard.html
@@ -1,5 +1,5 @@
 <div>
-    <div ng-if="!options.hideToolbar">
+    <div ng-if="!options.hideToolbar" class="center-align">
         <span ng-if="!options.widgetButtons">
             <a class='dropdown-button btn colorAccent' href='javascript:void(0);' data-activates='widgetDropdown' dropdown
                data-beloworigin="true"
@@ -14,21 +14,7 @@
                 </li>
             </ul>
         </span>
-        <span ng-if="options.widgetButtons">
-            <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
-                <a class="btn-floating btn-large colorAccent ">
-                    <i class="large material-icons">add</i>
-                </a>
-                <ul>
-                    <li ng-repeat="widget in widgetDefs">
-                        <button
-                                style="margin: 1px" ng-click="addWidgetInternal($event, widget);"
-                                class="waves-effect waves-light colorAccent btn right" translate="{{widget.title}}">
-                        </button>
-                    </li>
-                </ul>
-            </div>
-        </span>
+        
         <button class="waves-effect waves-light btn colorAccent" ng-click="resetWidgetsToDefault()"><i
                 class="material-icons">refresh</i></button>
 
