Detail widget + divers css

--- a/src/app/components/directives/agenda/eventCard.html
+++ b/src/app/components/directives/agenda/eventCard.html
@@ -43,7 +43,7 @@
         <div ng-attr-id="mapEvent-{{event._id}}" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer">
-        <a href="" class="modal-action modal-close waves-effect waves-light btn red"
+        <a href="" class="modal-action modal-close waves-effect waves-light btn colorAccent"
            translate="commons.buttons.close"></a>
     </div>
 </div>
