--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -99,7 +99,7 @@
                            data-hover="false">
                             <i class="material-icons right" ng-if="!(notifications.length > 0)">email</i>
                             <i class="material-icons right red-text text-lighten-1" ng-if="notifications.length > 0" >drafts</i>
-                            <span class="new badge white-text red lighten-1" ng-if="notifications.length > 0">{{notifications.length}}</span>
+                            <span class="new badge white-text colorAccent" ng-if="notifications.length > 0">{{notifications.length}}</span>
                         </a>
                     </li>
 
