--- a/src/app/components/directives/stats/hand/radarChart.html
+++ b/src/app/components/directives/stats/hand/radarChart.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="card-reveal">
-        <span class="card-title grey-text text-darken-4">{{title}}<i class="material-icons right">close</i></span>
+        <span class="card-title grey-text text-darken-4"><small>{{title}}<i class="material-icons right">close</i></small></span>
         <table>
             <thead>
             <tr>
