--- a/src/app/components/directives/commons/filter/calendar.html
+++ b/src/app/components/directives/commons/filter/calendar.html
@@ -4,14 +4,14 @@
     <div class="col s1 center">&nbsp;</div>
 
     <!-- Periodicity selector -->
-    <div class="col s1 center red lighten-1" style="margin:1px">
+    <div class="col s1 center colorAccent" style="margin:1px">
         <a href="" ng-click="currentMonth()" class="white-text"><h6>{{'commons.periodicity.month' | translate }}</h6></a>
     </div>
 
-    <div class="col s1 center red lighten-1" style="margin:1px">
+    <div class="col s1 center colorAccent" style="margin:1px">
         <a href="" ng-click="currentQuarter()" class="white-text"><h6>{{'commons.periodicity.quarter' | translate }}</h6></a>
     </div>
-    <div class="col s1 center red lighten-1" style="margin:1px">
+    <div class="col s1 center colorAccent" style="margin:1px">
         <a href="" ng-click="currentSeason()" class="white-text"><h6>{{'commons.periodicity.season' | translate }}</h6></a>
     </div>
 
@@ -75,14 +75,14 @@
 
         <!-- Periodicity selector -->
         <div class="col s1 center">&nbsp;</div>
-        <div class="col s3 center red lighten-1" style="margin:1px">
+        <div class="col s3 center colorAccent" style="margin:1px">
             <a href="" ng-click="currentMonth()" class="white-text"><h6 class="small">{{'commons.periodicity.month' | translate }}</h6></a>
         </div>
 
-        <div class="col s4 center red lighten-1" style="margin:1px">
+        <div class="col s4 center colorAccent" style="margin:1px">
             <a href="" ng-click="currentQuarter()" class="white-text"><h6 class="small">{{'commons.periodicity.quarter' | translate }}</h6></a>
         </div>
-        <div class="col s3 center red lighten-1" style="margin:1px">
+        <div class="col s3 center colorAccent" style="margin:1px">
             <a href="" ng-click="currentSeason()" class="white-text"><h6 class="small">{{'commons.periodicity.season' | translate }}</h6></a>
         </div>
         <div class="col s1 center">&nbsp;</div>
