--- a/src/app/components/directives/stats/hand/detailModal.html
+++ b/src/app/components/directives/stats/hand/detailModal.html
@@ -1,4 +1,4 @@
-<button class="btn waves-effect waves-light red" title="{{'stats.buttons.timeline' | translate}}"
+<button class="btn waves-effect waves-light colorAccent" title="{{'stats.buttons.timeline' | translate}}"
         ng-click="openDetail()">
     <i class="material-icons">timeline</i>
 </button>
