--- a/src/app/components/directives/widgets/dashboard.html
+++ b/src/app/components/directives/widgets/dashboard.html
@@ -30,30 +30,49 @@
 
     <div ui-sortable="sortableOptions" ng-model="widgets" class="dashboard-widget-area">
         <div ng-repeat="widget in widgets" ng-style="widget.containerStyle" class="widget-container" widget>
+            
             <div class="widget" ng-class="widget.classContent">
                 <div ng-class="widget.classHeader">
                     <i class="{{widget.icon}}"></i>
-                    <span class="widget-title" ng-dblclick="editTitle(widget)" ng-hide="widget.editingTitle"
-                          translate="{{widget.title}}"></span>
-                    <form action="" class="widget-title" ng-show="widget.editingTitle"
-                          ng-submit="saveTitleEdit(widget)">
-                        <div class="input-field col s12">
-                            <input type="text" ng-model="widget.title" ng-class="widget.class"/>
-                        </div>
-                    </form>
-                    <span ng-if="!options.hideWidgetName">{{widget.name}}</span>
-                    <span ng-click="removeWidget(widget);" ng-if="!options.hideWidgetClose"><i
-                            class="material-icons right">close</i></span>
-                        <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
-                            <i class="material-icons right">{{ widget.contentStyle.display ===
-                                'none'?'arrow_drop_up':''}}{{widget.contentStyle.display !==
-                                'none'?'arrow_drop_down':''}}</i>
-                        </span>
+                    {{widget.title  | translate}}
+                    
+                    <span ng-click="removeWidget(widget);" ng-if="!options.hideWidgetClose"><i class="material-icons right">close</i></span>
+                    <span ng-click="widget.contentStyle.display = widget.contentStyle.display === 'none' ? 'block' : 'none'">
+                        <i class="material-icons right">
+                            {{ widget.contentStyle.display ===
+                            'none'?'arrow_drop_up':''}}{{widget.contentStyle.display !==
+                            'none'?'arrow_drop_down':''}}
+                        </i>
+                    </span>
+                    <span ng-if="widget.activator"><i class="activator material-icons right">more_vert</i></span>
                 </div>
                 <div class="widget-content container" ng-style="widget.contentStyle" style="overflow-y: auto;"></div>
+                
+                <div class="card-reveal">
+                    <span class="card-title">
+                        <small><i class="{{widget.icon}}"></i>
+                        {{widget.title  | translate}}
+                        <i class="material-icons right">close</i></small></span>
+                    <table>
+                        <thead>
+                        <tr>
+                            <th data-field="indicators"></th>
+                            <th ng-repeat="p in series track by $index" data-field="{{p}}" class="center-align" ng-bind="p"></th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr ng-repeat="l in labels track by $index">
+                            <td><b ng-bind="l"></b></td>
+                            <td ng-repeat="d in data track by $index" data-field="{{d[$parent.$index]}}" class="center-align">
+                                {{d[$parent.$index]}}
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                
                 <div class="widget-ew-resizer" ng-mousedown="grabResizer($event)"></div>
-                <div ng-if="widget.enableVerticalResize" class="widget-s-resizer"
-                     ng-mousedown="grabSouthResizer($event)"></div>
+                <div ng-if="widget.enableVerticalResize" class="widget-s-resizer" ng-mousedown="grabSouthResizer($event)"></div>
             </div>
         </div>
     </div>
