--- a/src/app/modules/sandbox/effective/players/viewPlayer.html
+++ b/src/app/modules/sandbox/effective/players/viewPlayer.html
@@ -108,7 +108,7 @@
         <div id="ngMapPlayer" style="width:100%;height:90%;"></div>
     </div>
     <div class="modal-footer">
-      <a href="#/private/viewPlayer/{{player._id}}" class="modal-action modal-close waves-effect waves-red btn btn-s red"
+      <a href="#/private/viewPlayer/{{player._id}}" class="modal-action modal-close waves-effect waves-red btn btn-s colorAccent"
                    translate="commons.buttons.close"></a>
     </div>
   </div>
