--- a/src/app/components/directives/commons/headerMenu/headerMenu.html
+++ b/src/app/components/directives/commons/headerMenu/headerMenu.html
@@ -66,7 +66,7 @@
     </div>
 </nav>
 <!-- Menu Connected First header-->
-<div class="navbar-fixed" ng-if="user && !user.account.firstConnexion">
+<div class="navbar-fixed" ng-if="user && !user.account.firstConnexion && paid">
     <nav class="top-nav colorSecondary visible-nav" role="navigation">
         <div class="container">
             <div class="nav-wrapper">
